--- a/src/App.css
+++ b/src/App.css
@@ -91,31 +91,41 @@ body {
 }
 
 .home-page {
+  height: calc(100vh - 75px);
   display: flex;
   position: relative;
 }
 
 .shop-now-wrapper {
   flex: 1;
-  height: 100vh;
+  height: 100%;
   margin-left: 0px;
   font-weight: 100;
   color: white;
   /* position: absolute; */
-  font-size: 50px;
+  font-size: 32px;
   /* top: 0;
   bottom: 0; */
   font-family: Roboto;
   display: flex;
   flex-direction: column;
-  justify-content: center;
 }
 
 .shop-now {
   margin-right: auto;
   margin-left: auto;
-  padding: 20px;
+  padding: 10px 15px;
   background: black;
+  opacity: 0.8;
   box-shadow: 5px 5px 15px 5px grey;
   border-radius: 5px;
+  margin-top: 40px;
+}
+
+h1 {
+  margin-top: 25vh;
+  color: black;
+  text-align: center;
+  font-size: 42px;
+  font-weight: 300;
 }
