--- a/src/App.css
+++ b/src/App.css
@@ -137,6 +137,10 @@ svg {
 
 h1 {
   margin-top: 25vh;
+}
+
+h1,
+h2 {
   color: black;
   text-align: center;
   font-size: 42px;
@@ -148,7 +152,41 @@ h1 {
   transform: scale(0.95);
   transition: all 0.3s ease-in-out;
 }
+.product-wrapper {
+}
 
+.product {
+  width: 200px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: blue solid 1px;
+  font-family: Roboto;
+}
+
+.product > span {
+  margin: 5px;
+}
+
+.image-wrapper {
+  padding: 10px;
+  width: 200px;
+  height: 200px;
+}
+
+.add-to-cart {
+  font-family: Roboto;
+  align-self: stretch;
+  background: #88bb3d;
+  border: none;
+  padding: 10px;
+  font-size: 15px;
+  margin-bottom: 5px;
+}
+
+.image-wrapper > img {
+  height: 100%;
+}
 @media only screen and (max-width: 600px) {
   .store-name {
     margin-right: 37.5px;
