--- a/src/App.css
+++ b/src/App.css
@@ -16,18 +16,19 @@ body {
   display: flex;
   align-items: center;
   font-family: "Bahianita", cursive;
-  height: 75px;
+
   flex-wrap: wrap;
   box-shadow: 0 0 5px grey;
 }
 
 nav {
+  height: 75px;
   display: flex;
   align-items: center;
 }
 
 .company-logo-wrapper {
-  height: 100%;
+  height: 75px;
   display: flex;
   align-items: center;
 }
@@ -136,7 +137,7 @@ svg {
 }
 
 h1 {
-  margin-top: 25vh;
+  margin-top: 15vh;
 }
 
 h1,
@@ -144,7 +145,7 @@ h2 {
   color: black;
   text-align: center;
   font-size: 42px;
-  font-weight: 500;
+  font-weight: 300;
 }
 
 .shop-now:hover {
@@ -154,6 +155,7 @@ h2 {
 }
 .product-wrapper {
   padding: 20px 40px;
+  padding-top: 0px;
 }
 
 .product {
@@ -221,7 +223,6 @@ h2 {
   }
   .company-logo-wrapper {
     margin: auto;
-    height: 100%;
     display: flex;
     align-items: center;
   }
@@ -230,9 +231,8 @@ h2 {
   }
   .shop-now-wrapper {
     position: absolute;
-    background: rgba(223, 220, 220, 0.5);
+    background: rgba(223, 220, 220, 0.3);
     width: 100%;
-    height: 100vh;
   }
   h1 {
     font-weight: 400;
@@ -244,10 +244,6 @@ h2 {
   nav {
     width: 100vw;
     background: white;
-  }
-  .nav {
-    position: relative;
-    z-index: 100;
   }
 
   .img-wrapper {
@@ -261,7 +257,6 @@ h2 {
   }
 
   nav {
-    height: 75px;
     justify-content: space-around;
     box-shadow: 0 4px 2px -2px gray;
     border-top: 1px solid grey;
