--- a/src/App.css
+++ b/src/App.css
@@ -119,7 +119,7 @@ svg {
   font-size: 32px;
   /* top: 0;
   bottom: 0; */
-  font-family: "Roboto";
+  font-family: "ROBOTO";
   display: flex;
   flex-direction: column;
 }
@@ -127,7 +127,7 @@ svg {
 .shop-now {
   font-weight: 100;
   font-size: 32px;
-  font-family: "Roboto";
+  font-family: "ROBOTO";
   color: white;
   text-decoration: none;
   cursor: pointer;
@@ -183,7 +183,7 @@ h2 {
   align-items: center;
   box-shadow: 5px 5px 15px -7px black;
   border-radius: 10px;
-  font-family: "Roboto";
+  font-family: "ROBOTO";
 }
 
 .product:hover {
@@ -202,7 +202,7 @@ h2 {
 }
 
 .add-to-cart {
-  font-family: "Roboto";
+  font-family: "ROBOTO";
   align-self: stretch;
   background: #88bb3d;
   border: none;
@@ -238,9 +238,25 @@ h1.cart-header {
 }
 
 .cart-wrapper {
+  padding: 20px;
   height: 100%;
   display: flex;
   flex-direction: column;
+}
+
+.cart-grid {
+  background: black;
+  width: 100%;
+
+  display: grid;
+  grid-template-columns: 4fr 1fr 1fr 1fr;
+  grid-row-gap: 1px;
+  grid-template-rows: repeat(auto-fill, 40px);
+  align-items: center;
+}
+
+.cart-grid > * {
+  background: white;
 }
 @media only screen and (max-width: 600px) {
   .product {
