style Checkout Button for mobile

--- a/src/App.css
+++ b/src/App.css
@@ -398,4 +398,12 @@ select {
   .cart-image-wrapper {
     display: none;
   }
+
+  .checkout-wrapper {
+    width: 100%;
+  }
+
+  .checkout-button {
+    align-self: stretch;
+  }
 }
