--- a/src/App.css
+++ b/src/App.css
@@ -58,6 +58,12 @@ img {
   flex: 1;
 }
 
+.cart-button-wrapper {
+  margin-right: 40px;
+  display: flex;
+  align-items: center;
+}
+
 .shopping-cart-button {
   cursor: pointer;
   height: 40px;
@@ -65,7 +71,7 @@ img {
   background: black;
   padding: 10px;
   position: relative;
-  margin-right: 40px;
+
   border-radius: 100px;
   border: none;
 }
@@ -328,6 +334,14 @@ select {
   box-shadow: 5px 5px 15px 0px grey;
 }
 
+.cart-item-number {
+  color: red;
+  font-weight: 500;
+  margin-left: 10px;
+  font-size: 16px;
+  font-family: "Roboto";
+}
+
 .checkout-total {
   font-size: 20px;
   align-self: flex-start;
@@ -443,6 +457,9 @@ button.item-detail-checkout-button {
   margin-top: auto;
 }
 @media only screen and (max-width: 600px) {
+  .cart-button-wrapper {
+    margin: 0px;
+  }
   .cart-grid {
     grid-template-columns: 4fr 70px 100px 70px;
   }
